# 5sosy

./: .gitignore  AGENTS.md  CLAUDE.md  Challenge Strategy.html  Design_Brief.md  GEMINI.md  LICENSE  README.md  launch_agents.ps1
agents/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
agents/playground/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  analyzer_job_main.py  deploy-analyzer.ps1  deploy-harvester.ps1  deploy-job.ps1  deploy-migration.ps1  deploy-mindmap-job.ps1  deploy-reconcile-job.ps1  deploy-translate-metadata.ps1  deploy.ps1  harvester_job_main.py  migration_job_main.py  mindmap_job_main.py  playlist_crawler.py  pyproject.toml  reconcile_pages_job_main.py  run_crawler_forecast.py  run_harvester_local.ps1  server.py  setup-secrets.ps1  sync_job_main.py
agents/playground/analyzer_agent/: agent.py
agents/playground/ask_me_agent/: agent.py  tools.py
agents/playground/executor_agent/: agent.py
agents/playground/feedback_agent/: agent.py
agents/playground/harvester_agent/: agent.py
agents/playground/ingestion_agent/: agent.py  books_fallback.json  counter.py  crawler.py  crawler_books_fallback.json  downloader.py  formatter.py  indexer.py  parser.py  video_extractor.py  videos_fallback.json
agents/playground/language_detection_agent/: __init__.py  agent.py  detector.py
agents/playground/migration_agent/: __init__.py  agent.py  evaluator.py  executor.py  orchestrator.py  presenter.py
agents/playground/mindmap_worker_agent/: __init__.py  agent.py  classifier.py  lineage.py  pipeline.py
agents/playground/onboarding_agent/: agent.py
agents/playground/orchestrator_agent/: agent.py
agents/playground/page_reconciliation_agent/: __init__.py  agent.py
agents/playground/pdf_parser_agent/: agent.py
agents/playground/scripts/: translate_book_metadata.py
agents/playground/shared/: hybrid_rank.py  locale_prompts.py  mongodb_client.py  search.py  system_research.py  tools.py  year_research.py
agents/playground/subject_search_agent/: __init__.py  agent.py
agents/playground/translation_agent/: __init__.py  agent.py
agents/src/fivesosy_agents/: __init__.py  assessment.py  av.py  ingestion.py  orchestrator.py  pedagogy.py  schemas.py  server.py  settings.py
agents/tests/: test_smoke.py
claude_prototype/: 5sosy Prototype (standalone).html  5sosy_Prototype.html
claude_prototype/src/: bundle.jsx
log/: session_2026-05-24_mongodb_fixes.md
memory/: implementation_plan.md  task.md  walkthrough.md
scripts/: deploy.py  enrich_concept_descriptions.py  md_to_notion.py
web/: .env.example  .firebaserc  .gitignore  README.md  apphosting.yaml  firebase.json  firestore.indexes.json  firestore.rules  next.config.mjs  package-lock.json  package.json  storage.rules  tailwind.config.ts
web/scripts/: seed-firestore.ts
web/src/: middleware.ts
web/src/app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
web/src/app/[locale]/: layout.tsx  page.tsx
web/src/components/books/: InsightsVisualizer.tsx
web/src/constants/: onboarding.ts  seed-data.ts  subjects.ts
web/src/i18n/: LocaleBlock.tsx  config.ts  get-dictionary.ts
web/src/lib/: activity.ts  agents.ts  avatar.ts  books.ts  mongodb.ts  profile.ts  roles.ts  sample-social.ts  seo.ts  types.ts
web/src/styles/: globals.css
(+101 files in other folders)
