[project]
name = "fivesosy-agents"
version = "0.1.0"
description = "5sosy ADK agent ensemble (orchestrator + ingestion + pedagogy + assessment + AV) wrapped in a FastAPI service for Cloud Run."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }

dependencies = [
    "google-adk>=1.0.0",
    "google-genai>=0.5.0",
    "google-cloud-aiplatform>=1.70.0",
    "google-cloud-firestore>=2.18.0",
    "google-cloud-storage>=2.18.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
    "pymongo>=4.6.0",
    "dnspython>=2.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
extraPaths = ["playground"]
