[project]
name = "khsosy-playground"
version = "0.1.0"
description = "khsosybot POC — orchestrator + executor with grounded Google Search via ADK"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }

dependencies = [
    "google-adk>=1.0.0",
    "google-genai>=0.5.0",
    "google-cloud-firestore>=2.18.0",
    "google-cloud-storage>=2.18.0",
    "google-cloud-run>=0.10.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "pypdf>=4.0.0",
    "pymupdf>=1.24.0",
    "httpx>=0.27.0",
    "psutil>=5.9.0",
    "pymongo>=4.6.0",
    "dnspython>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "orchestrator_agent*",
    "executor_agent*",
    "onboarding_agent*",
    "ingestion_agent*",
    "harvester_agent*",
    "analyzer_agent*",
    "pdf_parser_agent*",
    "migration_agent*",
    "language_detection_agent*",
    "translation_agent*",
    "ask_me_agent*",
    "shared*"
]
